// Vitest Snapshot v1

exports[`Toast > Toast baseVue demo works fine 1`] = `
<div
  class="toast-demo"
>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      纯文本
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      多行文字
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      带横向图标
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      带竖向图标
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      加载状态
      
    </span>
  </button>
</div>
`;

exports[`Toast > Toast closeVue demo works fine 1`] = `
<div
  class="toast-demo"
>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      显示提示
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      关闭提示
      
    </span>
  </button>
</div>
`;

exports[`Toast > Toast coverVue demo works fine 1`] = `
<div
  class="toast-demo"
>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      禁止滑动和点击
      
    </span>
  </button>
</div>
`;

exports[`Toast > Toast mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Toast 轻提示
  </h1>
  <p
    class="summary"
  >
    一种轻量级反馈或提示，不会打断用户操作。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础提示
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="toast-demo"
      >
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            纯文本
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            多行文字
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            带横向图标
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            带竖向图标
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            加载状态
            
          </span>
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        内置主题
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="toast-demo"
      >
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            成功提示
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            警告提示
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            错误提示
            
          </span>
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 显示遮罩
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        弹窗可显示遮罩，禁止滑动和点击
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="toast-demo"
      >
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            禁止滑动和点击
            
          </span>
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        04 手动关闭
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        手动关闭轻提示
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="toast-demo"
      >
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            显示提示
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            关闭提示
            
          </span>
        </button>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Toast > Toast themeVue demo works fine 1`] = `
<div
  class="toast-demo"
>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      成功提示
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      警告提示
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      错误提示
      
    </span>
  </button>
</div>
`;
